初步了解Java原生代码沙箱